<resources>
    <string name="app_name">Youtube_api</string>
    <string name="back">Back</string>
    <string name="playlist">playlist</string>
    <string name="fab_button">fab_button</string>
    <string name="playlists">playlists</string>
    <string name="image">image</string>
    <string name="try_again">Try again</string>
    <string name="no_connection">No connection!!</string>
    <string name="select_video_quality">Select video quality</string>
    <string name="_1080p">1080p</string>
    <string name="_720p">720p</string>
    <string name="_480p">480p</string>
    <string name="download">Download</string>
    <string name="desc">In this series, we break down the impact of displacement, instability, violence, and trauma in children, and offer exercises to support children in their healing journey.</string>
</resources>